testdata/baselines/reference/submodule/conformance/varRequireFromJavascript.errors.txt
use.js(1,18): error TS2307: Cannot find module './ex' or its corresponding type declarations.
use.js(12,12): error TS7006: Parameter 'wrap' implicitly has an 'any' type.


==== use.js (2 errors) ====
    var ex = require('./ex')
                     ~~~~~~
!!! error TS2307: Cannot find module './ex' or its corresponding type declarations.
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Crunch} wrap
     */
    function f(wrap) {
               ~~~~
!!! error TS7006: Parameter 'wrap' implicitly has an 'any' type.
        wrap.n
    }
    
==== ex.js (0 errors) ====
    export class Crunch {
        /** @param {number} n */
        constructor(n) {
            this.n = n
        }
        m() {
            return this.n
        }
    }
    